--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
-{
+{  
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -21,14 +21,18 @@
     "lib": [
       "es2020",
       "dom"
-    ],
-    
+    ],   
     "strictPropertyInitialization" : false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictNullChecks" : false,
+    "strictFunctionTypes" : false,
+    "strictBindCallApply" : false,
+    "strictPropertyInitialization" : false  
+     
   }
-}
+} 
